# topological_data_analysis_mx_league

./: Makefile  README.md  pyproject.toml  requirements.txt
data/interim/: pca_components.csv
data/processed/: cleaned_liga_mx_data.csv  non_normalized_liga_mx_data.csv  normalized_features.csv  normalized_liga_mx_data.csv
data/raw/: liga_mx_stats.csv  liga_mx_stats.pkl
docs/: mkdocs.yml
docs/docs/: index.md
reports/figures/: Edad_frequency_table.csv  Equipo_frequency_table.csv  Jugador_frequency_table.csv  Nacimiento_frequency_table.csv  País_frequency_table.csv  Posc_frequency_table.csv
reports/figures/mapper/: persistent_homology_graph_two.html
reports/figures/pca_analysis/: variable_loadings.csv
reports/presentation/: presentation_tda.tex
topological_data_analysis_mx_league/: __init__.py  dataset.py  features.py  interactive_mapper.py  persistent_homology.py  plots.py  principal_component_analysis.py
topological_data_analysis_mx_league/modeling/: predict.py  train.py
