[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "topological_data_analysis_mx_league"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Erick Jes\u00fas R\u00edos Gonz\u00e1lez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["topological_data_analysis_mx_league"]
force_sort_within_sections = true
